python/testData/inspections/AddImport.py
<error descr="Unresolved reference 'ImportTarget'">ImportTarget</error>.foo

foo = 1
